refactor(BridgeGameTest.java) : 미사용 import 삭제, 코드 정리